[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/objects/fuel_barrel.png" type="Texture" id=1]
[ext_resource path="res://src/objects/fuel_barrel.gd" type="Script" id=2]
[ext_resource path="res://src/objects/explosion_hitbox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 5.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 34.1321

[node name="FuelBarrel" type="Area2D"]
collision_layer = 0
collision_mask = 176
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -5.5 )
shape = SubResource( 1 )

[node name="ExplosionHitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionHitbox"]
self_modulate = Color( 0.0470588, 0, 0.890196, 1 )
position = Vector2( 0, -5 )
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
